pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  labels:
    app: myapp-container
    tier: nginx-container
spec:
  containers:
  - name: myapp-container
    image: nginx
