resourcelimit.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-affinity
spec:  
  containers:
  - name: pod-affinity
    image: k8s.gcr.io/pause:2.0
    resources:
      limits:
        memory: 512Mi
        cpu: "1"
      requests:
        memory: "256Mi"
        cpu:    "0.5"    
        
        
 requestmeans : pod will get guranteeed specific memory and cpu 
 limit: It will not go beyond that limit
