service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:   
    tier: nginx-container
  type: NodePort 
  ports:
  - nodePort: 31000
    port: 80 #mandatory
    targetPort: 80 #container port
