ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: name-virtual-host-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: ravindra.abc.com
    http:
      paths:
      - backend:
          service:
            name: service1
            port:
              number: 80
  - host: singh.abc.com
    http:
      paths:
      - backend:
          service:
            name: service2
            port:
              number: 80
